[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["Curious Garlic <curiousgarlic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# There’s a place for everything, and everything is in its place.

